// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot Default should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gKYfnG"
  >
    <input
      class="Input__StyledInput-sc-1uzn9jx-0 Input___StyledStyledInput-sc-1uzn9jx-1 iioXxK hquitd"
      placeholder="placeholder"
      value=""
    />
    <button
      class="Button__StyledButton-sc-mes1hd-0 Button___StyledStyledButton-sc-mes1hd-1 fxBFHR kQFxcF"
      type="button"
    >
      <span
        class="material-icons"
      >
        keyboard_arrow_right
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot Error should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-hKMtZM gKYfnG"
  >
    <p
      class="sc-eCYdqJ deDuLQ"
    >
      <span
        class="material-icons md-10"
      >
        cancel
      </span>
      error text
    </p>
    <input
      class="Input__StyledInput-sc-1uzn9jx-0 Input___StyledStyledInput-sc-1uzn9jx-1 iioXxK hquitd"
      placeholder="placeholder"
      value=""
    />
    <button
      class="Button__StyledButton-sc-mes1hd-0 Button___StyledStyledButton-sc-mes1hd-1 fxBFHR kQFxcF"
      type="button"
    >
      <span
        class="material-icons"
      >
        keyboard_arrow_right
      </span>
    </button>
  </div>
</DocumentFragment>
`;
